<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">scanner and pdf play</string>
    <string name="hello_world">welcome to scanner and pdf play!</string>
    <string name="menu_settings">settings</string>
    <string name="select_scanner">open scanner</string>
    <string name="select_imageconvert">convert image to pdf</string>
    <string name="select_txtconvert">convert txt file to pdf</string>
    <string name="select_htmlconvert">convert html file to pdf</string>
    <string name="select_unlockpdf">unlock pdf</string>
    <string name="select_lockpdf">protect pdf with password</string>
    <string name="select_pdfToText">extract text from pdf</string>
    <string name="title_activity_scanner">scanner</string>
    <string name="title_activity_image_to_pdf">image to pdf</string>
    <string name="title_activity_file_to_pdf">file to pdf</string>
    <string name="title_activity_protect_pdf">protect pdf</string>
    <string name="open_pdf">open this file</string>
    <string name="share_pdf">share this file</string>
    <string name="protect_pdf">protect this pdf</string>
    <string name="delete_pdf">delete this file</string>
    <string name="rename_pdf">rename this file</string>
    <string name="concatenate_pdf">concatenate two pdfs</string>
    <string name="extract_pdf">extract pages from a pdf</string>
    <string name="enter_password">enter the password</string>
    <string name="enter_name">enter name</string>
    <string name="confirm_password">confirm the password</string>
    <string name="title_activity_pick_password">enter password</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_lock_pdf">lock pdf</string>
    <string name="title_activity_concatenate_pdf">concatenate pdf</string>
    <string name="title_activity_split">split pdf</string>
    <string name="title_activity_pick_number">enter number</string>
    <string name="enter_frompgnumber">from page number</string>
    <string name="enter_topgnumber">to page number</string>
    <string name="app_home">open source app: http://code.google.com/p/snannerandpdfplay</string>
    <string name="title_about">about scanner and pdf play</string>
    <string name="open_snpdf_file">my prepared files</string>
    <string name="select_copyProtectedPDF">copy encrypted pdf content to new</string>
    <string name="title_activity_open_snpdffolder">snpdf folder view</string>
    <string name="title_activity_picked_pdf">chosen pdf</string>
    <string name="title_activity_faq">important tips and faqs</string>
    <string name="motivation">Motivation and Resources</string>
    <string name="developer">Developer</string>
    <string name="aahuti">Aahuti Ghosh</string>
    <string name="shikhar">Kumar Shikhar</string>
    <string name="title_activity_extract_text">extract text from pdf</string>
    <string name="select_addwatermark">add watermark image to pdf</string>
    <string name="adUnitId">a151431df70e0ce</string>
    <string name="title_activity_watermark">add watermark</string>
    <string name="title_activity_rename">rename file</string>
    <string name="title_activity_pick_string">enter name</string>
    <string name="title_activity_copy_encrypted">copy encrypted pdf</string>
    <string name="yes">yes please</string>

</resources>